# Lab5-debug

./: .history  README.md
Lab2-buggy/: .history  Readme.md  main.py  pyproject.toml  requirements.txt
Lab2-buggy/src/: __init__.py  cat.py  cd.py  cp.py  grep.py  help.py  logger.py  ls.py  mv.py  resolve.py  rm.py  tar_archive.py  zip_archive.py
Lab2-buggy/tests/: test_cat.py  test_cd.py  test_cp.py  test_grep.py  test_ls.py  test_mv.py  test_rm.py  test_some_exceptions.py  test_tar_archives.py  test_zip_archives.py
reports/report1/: report_1.md
reports/report2/: report_2.md
reports/report3/: report_3.md
reports/report4/: report_4.md
reports/report5/: report_5.md
