[project]
name = "console-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py", "*/help.py", "*/logger.py", "*/resolve.py"]

[tool.coverage.report]
show_missing = true
fail_inder = 80